# packages/server/src/swagger/swagger.yaml
@@ -408,6 +408,16 @@ definitions:
             address:
                 type: string
                 description: ""
+            groups:
+                type: array
+                items:
+                    type: string
+                description: ""
+            roles:
+                type: array
+                items:
+                    type: string
+                description: ""
         type: object
         required:
             - username
@@ -1554,6 +1564,23 @@ definitions:
             - ext
             - url
             - uri
+    ResultList$PhotoRes:
+        description: ""
+        properties:
+            list:
+                type: array
+                items:
+                    $ref: '#/definitions/PhotoRes'
+                description: ""
+            count:
+                type: number
+                format: double
+                description: ""
+            query:
+                $ref: '#/definitions/Query'
+        type: object
+        required:
+            - list
     Photo:
         description: ""
         properties:
@@ -1587,24 +1614,7 @@ definitions:
             - ext
             - url
             - uri
-    ResultList$Photo:
-        description: ""
-        properties:
-            list:
-                type: array
-                items:
-                    $ref: '#/definitions/Photo'
-                description: ""
-            count:
-                type: number
-                format: double
-                description: ""
-            query:
-                $ref: '#/definitions/Query'
-        type: object
-        required:
-            - list
-    ArticleResponse:
+    ArticleRes:
         description: ""
         properties:
             id:
@@ -1770,6 +1780,23 @@ definitions:
             - meta
             - content
             - template
+    ResultList$ArticleRes:
+        description: ""
+        properties:
+            list:
+                type: array
+                items:
+                    $ref: '#/definitions/ArticleRes'
+                description: ""
+            count:
+                type: number
+                format: double
+                description: ""
+            query:
+                $ref: '#/definitions/Query'
+        type: object
+        required:
+            - list
     Article:
         description: ""
         properties:
@@ -1828,24 +1855,7 @@ definitions:
             - meta
             - content
             - template
-    ResultList$Article:
-        description: ""
-        properties:
-            list:
-                type: array
-                items:
-                    $ref: '#/definitions/Article'
-                description: ""
-            count:
-                type: number
-                format: double
-                description: ""
-            query:
-                $ref: '#/definitions/Query'
-        type: object
-        required:
-            - list
-    CategoryResponse:
+    CategoryRes:
         description: ""
         properties:
             id:
@@ -1949,6 +1959,23 @@ definitions:
             - parent
             - paths
             - description
+    ResultList$CategoryRes:
+        description: ""
+        properties:
+            list:
+                type: array
+                items:
+                    $ref: '#/definitions/CategoryRes'
+                description: ""
+            count:
+                type: number
+                format: double
+                description: ""
+            query:
+                $ref: '#/definitions/Query'
+        type: object
+        required:
+            - list
     Category:
         description: ""
         properties:
@@ -1985,24 +2012,7 @@ definitions:
             - parent
             - paths
             - description
-    ResultList$Category:
-        description: ""
-        properties:
-            list:
-                type: array
-                items:
-                    $ref: '#/definitions/Category'
-                description: ""
-            count:
-                type: number
-                format: double
-                description: ""
-            query:
-                $ref: '#/definitions/Query'
-        type: object
-        required:
-            - list
-    MediaResponse:
+    MediaRes:
         description: ""
         properties:
             id:
@@ -2097,6 +2107,23 @@ definitions:
             - ext
             - url
             - uri
+    ResultList$MediaRes:
+        description: ""
+        properties:
+            list:
+                type: array
+                items:
+                    $ref: '#/definitions/MediaRes'
+                description: ""
+            count:
+                type: number
+                format: double
+                description: ""
+            query:
+                $ref: '#/definitions/Query'
+        type: object
+        required:
+            - list
     Media:
         description: ""
         properties:
@@ -2130,24 +2157,7 @@ definitions:
             - ext
             - url
             - uri
-    ResultList$Media:
-        description: ""
-        properties:
-            list:
-                type: array
-                items:
-                    $ref: '#/definitions/Media'
-                description: ""
-            count:
-                type: number
-                format: double
-                description: ""
-            query:
-                $ref: '#/definitions/Query'
-        type: object
-        required:
-            - list
-    PageResponse:
+    PageRes:
         description: ""
         properties:
             id:
@@ -2281,6 +2291,23 @@ definitions:
             - meta
             - content
             - template
+    ResultList$PageRes:
+        description: ""
+        properties:
+            list:
+                type: array
+                items:
+                    $ref: '#/definitions/PageRes'
+                description: ""
+            count:
+                type: number
+                format: double
+                description: ""
+            query:
+                $ref: '#/definitions/Query'
+        type: object
+        required:
+            - list
     Page:
         description: ""
         properties:
@@ -2331,24 +2358,7 @@ definitions:
             - publish
             - content
             - template
-    ResultList$Page:
-        description: ""
-        properties:
-            list:
-                type: array
-                items:
-                    $ref: '#/definitions/Page'
-                description: ""
-            count:
-                type: number
-                format: double
-                description: ""
-            query:
-                $ref: '#/definitions/Query'
-        type: object
-        required:
-            - list
-    WidgetResponse:
+    WidgetRes:
         description: ""
         properties:
             id:
@@ -2419,6 +2429,23 @@ definitions:
             - title
             - params
             - type
+    ResultList$WidgetRes:
+        description: ""
+        properties:
+            list:
+                type: array
+                items:
+                    $ref: '#/definitions/WidgetRes'
+                description: ""
+            count:
+                type: number
+                format: double
+                description: ""
+            query:
+                $ref: '#/definitions/Query'
+        type: object
+        required:
+            - list
     Widget:
         description: ""
         properties:
@@ -2444,23 +2471,6 @@ definitions:
             - title
             - type
             - params
-    ResultList$Widget:
-        description: ""
-        properties:
-            list:
-                type: array
-                items:
-                    $ref: '#/definitions/Widget'
-                description: ""
-            count:
-                type: number
-                format: double
-                description: ""
-            query:
-                $ref: '#/definitions/Query'
-        type: object
-        required:
-            - list
 info:
     description: 项目标准接口
     license:
@@ -2669,6 +2679,12 @@ paths:
                     type: number
                     format: double
                     default: 10
+                -
+                    description: ""
+                    in: query
+                    name: sort
+                    required: false
+                    type: string
     '/dict/{id}':
         get:
             operationId: DictsFindOne
@@ -2894,6 +2910,12 @@ paths:
                     type: number
                     format: double
                     default: 10
+                -
+                    description: ""
+                    in: query
+                    name: sort
+                    required: false
+                    type: string
     '/user/{id}':
         get:
             operationId: UsersFindOne
@@ -3027,6 +3049,12 @@ paths:
                     type: number
                     format: double
                     default: 10
+                -
+                    description: ""
+                    in: query
+                    name: sort
+                    required: false
+                    type: string
     /menu/permissions:
         get:
             operationId: MenusGetPermissionTags
@@ -3078,7 +3106,7 @@ paths:
                 '200':
                     description: Ok
                     schema:
-                        $ref: '#/definitions/Menu'
+                        $ref: '#/definitions/MenuRes'
             description: ""
             tags:
                 - core
@@ -3125,6 +3153,12 @@ paths:
                     type: number
                     format: double
                     default: 10
+                -
+                    description: ""
+                    in: query
+                    name: sort
+                    required: false
+                    type: string
     '/log/{id}':
         get:
             operationId: LogsFindOne
@@ -3252,6 +3286,12 @@ paths:
                     type: number
                     format: double
                     default: 10
+                -
+                    description: ""
+                    in: query
+                    name: sort
+                    required: false
+                    type: string
     '/notice/{id}':
         get:
             operationId: NoticesFindOne
@@ -3455,6 +3495,12 @@ paths:
                     type: number
                     format: double
                     default: 10
+                -
+                    description: ""
+                    in: query
+                    name: sort
+                    required: false
+                    type: string
     '/setting/key/{key}':
         get:
             operationId: SettingsGetSettingsByKey
@@ -3602,6 +3648,12 @@ paths:
                     type: number
                     format: double
                     default: 10
+                -
+                    description: ""
+                    in: query
+                    name: sort
+                    required: false
+                    type: string
     '/role/{id}':
         get:
             operationId: RolesFindOne
@@ -3729,6 +3781,12 @@ paths:
                     type: number
                     format: double
                     default: 10
+                -
+                    description: ""
+                    in: query
+                    name: sort
+                    required: false
+                    type: string
     /group/tree:
         get:
             operationId: GroupsSearchTree
@@ -4055,7 +4113,7 @@ paths:
                 '200':
                     description: Ok
                     schema:
-                        $ref: '#/definitions/ResultList$Photo'
+                        $ref: '#/definitions/ResultList$PhotoRes'
             description: ""
             tags:
                 - cms
@@ -4082,6 +4140,12 @@ paths:
                     type: number
                     format: double
                     default: 10
+                -
+                    description: ""
+                    in: query
+                    name: sort
+                    required: false
+                    type: string
     '/photo/{id}':
         delete:
             operationId: PhotoRemove
@@ -4158,7 +4222,7 @@ paths:
                 '200':
                     description: Ok
                     schema:
-                        $ref: '#/definitions/ArticleResponse'
+                        $ref: '#/definitions/ArticleRes'
             description: ""
             tags:
                 - cms
@@ -4180,7 +4244,7 @@ paths:
                 '200':
                     description: Ok
                     schema:
-                        $ref: '#/definitions/ArticleResponse'
+                        $ref: '#/definitions/ArticleRes'
             description: ""
             tags:
                 - cms
@@ -4203,7 +4267,7 @@ paths:
                 '200':
                     description: Ok
                     schema:
-                        $ref: '#/definitions/ResultList$Article'
+                        $ref: '#/definitions/ResultList$ArticleRes'
             description: ""
             tags:
                 - cms
@@ -4212,12 +4276,6 @@ paths:
                     description: ""
                     in: query
                     name: keyword
-                    required: false
-                    type: string
-                -
-                    description: ""
-                    in: query
-                    name: category
                     required: false
                     type: string
                 -
@@ -4236,6 +4294,12 @@ paths:
                     type: number
                     format: double
                     default: 10
+                -
+                    description: ""
+                    in: query
+                    name: sort
+                    required: false
+                    type: string
     '/article/{id}':
         delete:
             operationId: ArticleRemove
@@ -4312,7 +4376,7 @@ paths:
                 '200':
                     description: Ok
                     schema:
-                        $ref: '#/definitions/CategoryResponse'
+                        $ref: '#/definitions/CategoryRes'
             description: ""
             tags:
                 - cms
@@ -4334,7 +4398,7 @@ paths:
                 '200':
                     description: Ok
                     schema:
-                        $ref: '#/definitions/CategoryResponse'
+                        $ref: '#/definitions/CategoryRes'
             description: ""
             tags:
                 - cms
@@ -4357,7 +4421,7 @@ paths:
                 '200':
                     description: Ok
                     schema:
-                        $ref: '#/definitions/ResultList$Category'
+                        $ref: '#/definitions/ResultList$CategoryRes'
             description: ""
             tags:
                 - cms
@@ -4384,6 +4448,12 @@ paths:
                     type: number
                     format: double
                     default: 10
+                -
+                    description: ""
+                    in: query
+                    name: sort
+                    required: false
+                    type: string
     '/category/{id}':
         delete:
             operationId: CategoryRemove
@@ -4460,7 +4530,7 @@ paths:
                 '200':
                     description: Ok
                     schema:
-                        $ref: '#/definitions/MediaResponse'
+                        $ref: '#/definitions/MediaRes'
             description: ""
             tags:
                 - cms
@@ -4482,7 +4552,7 @@ paths:
                 '200':
                     description: Ok
                     schema:
-                        $ref: '#/definitions/MediaResponse'
+                        $ref: '#/definitions/MediaRes'
             description: ""
             tags:
                 - cms
@@ -4505,7 +4575,7 @@ paths:
                 '200':
                     description: Ok
                     schema:
-                        $ref: '#/definitions/ResultList$Media'
+                        $ref: '#/definitions/ResultList$MediaRes'
             description: ""
             tags:
                 - cms
@@ -4532,6 +4602,12 @@ paths:
                     type: number
                     format: double
                     default: 10
+                -
+                    description: ""
+                    in: query
+                    name: sort
+                    required: false
+                    type: string
     '/media/{id}':
         delete:
             operationId: MediaRemove
@@ -4608,7 +4684,7 @@ paths:
                 '200':
                     description: Ok
                     schema:
-                        $ref: '#/definitions/PageResponse'
+                        $ref: '#/definitions/PageRes'
             description: ""
             tags:
                 - cms
@@ -4630,7 +4706,7 @@ paths:
                 '200':
                     description: Ok
                     schema:
-                        $ref: '#/definitions/PageResponse'
+                        $ref: '#/definitions/PageRes'
             description: ""
             tags:
                 - cms
@@ -4653,7 +4729,7 @@ paths:
                 '200':
                     description: Ok
                     schema:
-                        $ref: '#/definitions/ResultList$Page'
+                        $ref: '#/definitions/ResultList$PageRes'
             description: ""
             tags:
                 - cms
@@ -4680,6 +4756,12 @@ paths:
                     type: number
                     format: double
                     default: 10
+                -
+                    description: ""
+                    in: query
+                    name: sort
+                    required: false
+                    type: string
     '/page/{id}':
         delete:
             operationId: PageRemove
@@ -4756,7 +4838,7 @@ paths:
                 '200':
                     description: Ok
                     schema:
-                        $ref: '#/definitions/WidgetResponse'
+                        $ref: '#/definitions/WidgetRes'
             description: ""
             tags:
                 - cms
@@ -4778,7 +4860,7 @@ paths:
                 '200':
                     description: Ok
                     schema:
-                        $ref: '#/definitions/WidgetResponse'
+                        $ref: '#/definitions/WidgetRes'
             description: ""
             tags:
                 - cms
@@ -4801,7 +4883,7 @@ paths:
                 '200':
                     description: Ok
                     schema:
-                        $ref: '#/definitions/ResultList$Widget'
+                        $ref: '#/definitions/ResultList$WidgetRes'
             description: ""
             tags:
                 - cms
@@ -4828,6 +4910,12 @@ paths:
                     type: number
                     format: double
                     default: 10
+                -
+                    description: ""
+                    in: query
+                    name: sort
+                    required: false
+                    type: string
     '/widget/{id}':
         delete:
             operationId: WidgetRemove
